# rules_js_docker_repro

./: .bazelignore  .bazelrc  BUILD.bazel  Makefile  README.md  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/alpha/: .eslintrc.json  BUILD.bazel  jest.bzl  jest.config.js  jest.setup.js  next.config.js  package.json  tsconfig.json
apps/alpha/.next/cache/eslint/: .cache_1sdsxt9
apps/alpha/pages/: index.tsx
bazel/: next.bzl
